change picture size

--- a/201601/01.md
+++ b/201601/01.md
@@ -2,7 +2,7 @@
 
 最近参与基于Vue组件化的项目，凯哥给我分配了一个简单任务：用directive封装这样一个功能，当用户向表单输入内容时delete icon显示，点击delete icon清空用户输入的内容，然后隐藏。还是直接上图吧:
 
-![移除指令][1]
+<img src="https://raw.githubusercontent.com/superpig/blog/master/201601/assets/images/clearable.png" width="300">
 
 遇到这种icon，我们很容想到一种实现方式就是利用伪元素和transform属性，而且思路也很简单，直接贴代码:
 
@@ -46,7 +46,7 @@
 
 但是人们的需求并不满足于此，为了提高用户体验，尤其是移动端，这里我们需要优化的是：delete icon在尺寸不变大的情况下，扩大用户对这个delete icon的可点击范围。也就是要达到下面的效果：
 
-![扩大点击][2]
+<img src="https://raw.githubusercontent.com/superpig/blog/master/201601/assets/images/expand-area.png" width="150">
 
 为了达到这种用户体验，我们常见的处理方法还是利用css的伪元素:after(或:before),我们通过设置伪元素为绝对定位，然后所有方向属性设置为负值，这样就达到“无形中扩大元素”的效果，元素的可点击域也就扩大啦，这种方式堪称完美：），简单的事例如下：
 
@@ -96,7 +96,3 @@
 ```
 
 我们用一种更简单的方式实现了delete icon，居然还有"×"的符号的存在，我伪元素表示不服。到此，我已经深深的爱上伪元素啦，设计伪元素的人实在是太聪明了。
-
-
-  [1]: https://github.com/superpig/blog/blob/master/201601/assets/images/clearable.png
-  [2]: https://github.com/superpig/blog/blob/master/201601/assets/images/expand-area.png
