添加博文图片

--- a/201601/02.md
+++ b/201601/02.md
@@ -41,6 +41,8 @@ Object.defineProperty(obj, "name", {
 ```
 我们用上面的代码用Object.defineProperty()方法在obj对象中定义了name属性，如果obj.name方式去获取属性的值时，就会执行我们定义get函数，如果我们用obj.name = "Tom"的方式去设置这个属性的值，就会自动调用我们定义的set函数，在get和set函数中，我们就可以为所欲为，做我们想做的事情:)，Vue.js正是基于这个特性实现了数据绑定的机制。那下面我们把灯光打给Vue.js，先上一张官方给的数据绑定原理图：
 
+<img src="https://raw.githubusercontent.com/superpig/blog/master/201601/assets/images/data-binding.jpg" />
+
 听说写wiki原理图和源码更配，那我就贴上一部分Vue.js实现数据绑定的源码：
 
 ```js
