--- a/201608/01.md
+++ b/201608/01.md
@@ -41,8 +41,8 @@ someModule.controller('MyController', ['$scope', 'greeter', function ($scope, gr
 }]);
 ```
 
-#### \$inject属性声明：
-为了允许压缩工具重命名函数参数的前提下还能注入正确的服务，函数还需要使用\$inject属性声明依赖。\$inject属性是一个包含被注入服务名称的数组。使用这种声明方式是，\$inject数组中服务名称的顺序和函数名中服务的顺序保持一致。
+#### $inject属性声明：
+为了允许压缩工具重命名函数参数的前提下还能注入正确的服务，函数还需要使用$inject属性声明依赖。$inject属性是一个包含被注入服务名称的数组。使用这种声明方式是，$inject数组中服务名称的顺序和函数名中服务的顺序保持一致。
 
 ```js
 var MyController = function ($scope, greeter) {
@@ -87,7 +87,7 @@ var myController = function ($scope, $http) {
 };
 ```
 
-很显然，上面代码定义了一个controller，而且这个controller中使用了\$scope和\$http，但是AngularJS是怎么知道这个controller到底是需要\$scope，还是$http，还是两个都需要？接着我们修改一下injector。
+很显然，上面代码定义了一个controller，而且这个controller中使用了$scope和$http，但是AngularJS是怎么知道这个controller到底是需要$scope，还是$http，还是两个都需要？接着我们修改一下injector。
 
 ```js
 var injector = {
@@ -112,7 +112,7 @@ var injector = {
 dependencies用来存储所有的依赖，register用来注册依赖，resolve方法用来实现注入。我们模仿AngularJS预先注册几个模块。
 
 ```js
-injector.register('\$scope', {'test': ''});
+injector.register('$scope', {'test': ''});
 injector.register('$http', {'get': function () { console.log('get'))}});
 ```
 
