--- a/201608/02.md
+++ b/201608/02.md
@@ -11,7 +11,7 @@
 
 ### Provider
 - 语法：module.provider( 'providerName', function );
-- 结果：当声明providerName作为一个可注入的参数是，你获取的是( new ProviderFunction()).\$get().这个构造函数在$get方法调用之前就被实例化了 — ProviderFunction是传入module.provider的函数引用。
+- 结果：当声明providerName作为一个可注入的参数是，你获取的是( new ProviderFunction()).$get().这个构造函数在$get方法调用之前就被实例化了 — ProviderFunction是传入module.provider的函数引用。
 
 ```js
 function provider(name, provider_) {
